--- a/assets/css/products.css
+++ b/assets/css/products.css
@@ -1,5 +1,14 @@
 
 @media screen and (max-width: 375px) {
+    .header{
+        position: fixed;
+        width: 100%;
+        top: 0;
+        left: 0;
+        z-index: 10;
+        padding: 0rem 1rem;
+    
+    }
     .pro_{
         position: absolute;
         top: 0;
@@ -12,29 +21,40 @@
         min-height: 100dvh;
         background: var(--color-light-white);
     }
-    .container__products{
+    .container__products,
+    .container__dashboards{
         width: 100%;
         position: relative;
     }
-    .vector-ondas,
-    .vector-shadow-ondas{
+    .container-ondas,
+    .container-ondas-dashboard{
         position: absolute;
-        top: 0;
-        left: 50%;
-        transform: translateX(-50%);
+        top: -660px;
+        transition: top 300ms 100ms ease-in-out;
     }
+    .vector-ondas{
+        position: absolute;
+    }
+
     .vector-ondas{
         z-index: 2;
     }
     .vector-shadow-ondas{
-        top: -20%;
+        top: -80%;
         z-index: 1;
+        filter: blur(75px);
     }
     .productos__page{
         position: relative;
         z-index: 2;
-        padding: 0rem 1rem;
+        padding: 74px 1rem 1rem 1rem;
         height: 100dvh;
+        opacity: 1;
+        visibility: visible;
+        transform: translateY(0);
+        transition: transform 300ms ease-in-out,
+        opacity 300ms ease-in-out,
+        visibility 300ms ease-in-out;
     }
     .nav{
         display: flex;
@@ -72,7 +92,12 @@
         align-items: center;
         z-index: -1;
         visibility: hidden;
+        transform: translateY(50px);
         opacity: 0;
+        transition: opacity 300ms linear,
+            visibility 300ms linear,
+            transform 300ms linear;
+        height: calc(100dvh - 74px);
     }
     .list{
         list-style-type: none;
@@ -81,7 +106,7 @@
         gap: 10px;
         flex: 1;
     }
-    
+
     .link-menu{
         line-height: 80%;
         font-size: var(--font-menu);
@@ -90,9 +115,8 @@
         color: var(--text-color-secondary);
         padding: 0.75rem;
     }
-    .link-menu:hover{
-        background: red;
-    }
+
+    
     .icons{
         display: none;
     }
@@ -244,4 +268,21 @@
 .pro_show {
     margin-right: 0%;
     z-index: 10;
+}
+.container-links-show{
+    opacity: 1;
+    visibility: visible;
+    transform: translateY(0px);
+}
+.productos__page-show{
+    opacity: 0;
+    visibility: hidden;
+    transform: translateY(150px);
+}
+.container-ondas-show{
+    position: absolute;
+    top: 0%;
+}
+.hidden-scroll{
+    overflow: hidden;
 }
