--- a/assets/css/components.css
+++ b/assets/css/components.css
@@ -29,3 +29,14 @@
     text-decoration: none;
     line-height: 0.625rem;
 }
+
+.btn-gradient-primary{
+    background-image: linear-gradient(90deg, var(--color-primary), var(--color-secondary));
+    color: var(--color-white);
+}
+.btn{
+    padding: 12px;
+}
+.radius-full{
+    border-radius: 50px;
+}
