--- a/assets/css/products.css
+++ b/assets/css/products.css
@@ -1,13 +1,13 @@
 
 @media screen and (max-width: 375px) {
     .header{
-        position: fixed;
+        position: sticky;
         width: 100%;
         top: 0;
         left: 0;
         z-index: 10;
         padding: 0rem 1rem;
-    
+        backdrop-filter: blur(10px);
     }
     .pro_{
         position: absolute;
@@ -19,12 +19,16 @@
         overflow-x: hidden;
         overflow-y: auto;
         min-height: 100dvh;
+        height: 100%;
         background: var(--color-light-white);
     }
     .container__products,
     .container__dashboards{
         width: 100%;
         position: relative;
+    }
+    .container__products{
+        min-height: 100dvh;
     }
     .container-ondas,
     .container-ondas-dashboard{
@@ -47,8 +51,7 @@
     .productos__page{
         position: relative;
         z-index: 2;
-        padding: 74px 1rem 1rem 1rem;
-        height: 100dvh;
+        padding: 1rem;
         opacity: 1;
         visibility: visible;
         transform: translateY(0);
@@ -285,4 +288,8 @@
 }
 .hidden-scroll{
     overflow: hidden;
+}
+
+.header-bg-scroll{
+    background-image: linear-gradient(145deg, var(--color-primary), var(--color-secondary));
 }
