--- a/assets/css/variables.css
+++ b/assets/css/variables.css
@@ -23,6 +23,19 @@
     --text-color-green: #2DD00C;
 
     --text-color-card-products: #474A4B;
+    --text-color-light-black: #474A4B;
+
+    /* COLOR STATUS */
+
+    --color-strong-yellow: #BD9004;
+    --status-color-yellow: #FFD03C;
+    --status-color-light-yellow: #FFEAA7;
+    --color-soft-yellow: #FFFBEE;
+    --status-color-green: #2DD00C;
+    --status-color-light-green: #C6F0BD;
+    --status-color-blue: #3060FF;
+    --status-color-light-blue: #B1C3FF;
+
 
     
     /* ENLACES */
@@ -39,13 +52,13 @@
     /* BORDES PARA INPUTS */
     --input-border-light-grey: #D1D5DC;
     --input-border-white: #FFFFFF;
-
+    
     --border-color-light-grey: #EFEFEF;
     /* TAMAÑO DE FUENTES */
     --input-font-size: 0.938rem;
     --font-size-presentation: 1.75rem;
     --font-size-text: 0.875rem; /* 14px */
-    --font-size-subtitle: 1.125rem;
+    --font-size-subtitle: 1.125rem; /* 18px */
     --font-size-link: 0.813rem;
     --font-size-icon: 1.5rem;
     --font-size-logo: 1.5rem;
@@ -65,4 +78,5 @@
     --font-weight-semi-bold: 600;
     --font-weight-bold: 700;
     --font-weight-extra-bold: 800
+
 }
