--- a/assets/css/vector.css
+++ b/assets/css/vector.css
@@ -1,6 +1,4 @@
-html{
-    display: none;
-}
+
 .relative{
     position: relative;
 }
@@ -25,6 +23,16 @@ html{
         background: var(--color-secondary);
         overflow: hidden;
     }
+    .login_container{
+        display: flex;
+        flex-direction: column;
+        justify-content: end;
+        width: 100%;
+        min-height: 100dvh;
+        position: relative;
+        align-items: center;
+        z-index: 2;
+    }
     
     .vector-yellow-desktop {
         position: absolute;
@@ -32,7 +40,7 @@ html{
         bottom: 65%;
         transform: translateY(50%);
         right: 49%;
-        width: 1200px; /* Ocupa siempre la mitad del ancho de la pantalla */
+        width: 1200px;
         height: 1600px;
     }
     .vector-mesa{
@@ -162,7 +170,7 @@ html{
         font-size: var(--font-size-text);
     }
     .login__title{
-        position: relative;
+        position: absolute;
         z-index: 3;
         font-family: 'Bebas neue', sans-serif;
         font-size: var(--font-size-presentation);
@@ -172,6 +180,7 @@ html{
         padding-left: 1rem;
         padding-top: 1rem;
         line-height: 80%;
+        top: 0;
         color: var(--text-color-secondary);
     }
 }
