--- a/index.css
+++ b/index.css
@@ -33,3 +33,25 @@ html {
     font-optical-sizing: auto;
     font-style: normal;
 }
+.pl-20{
+    padding-left: 20px;
+}
+.pl-12{
+    padding-left: 12px;
+}
+.pt-12{
+    padding-top: 12px;
+}
+.pb-12{
+    padding-bottom: 12px;
+}
+.d-flex-direction-column{
+    display: flex;
+    flex-direction: column;
+}
+.g1{
+    gap: 1rem;
+}
+.d-flex{
+    display: flex;
+}
